<resources>
    <string name="app_name">Bucekt List</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_item">Map</string>
    <string name="title_activity_list_and_history">Bucket List</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>

    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="select_date">Select Date</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>

    <string name="sampleUsername">fares.bounajm@mymail.aud.edu</string>
    <string name="samplePassword">123456</string>

</resources>
