<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bounajm.fares.bucketlist.AddItemActivity"
    android:background="@color/backgroundColor">

    <include
        layout="@layout/toolbar_back"
        android:id="@+id/toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="148dp"
            android:layout_above="@+id/saveOrCreate"
            android:layout_alignTop="@+id/selectDateBtn"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            tools:context="com.bounajm.fares.bucketlist.AddItemActivity" />

        <Button
            android:id="@+id/saveOrCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:onClick="newEntrySave" />

        <EditText
            android:id="@+id/name_et"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/description_et"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:paddingLeft="3dp"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_below="@+id/name_et"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/selectDateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/latEt"
            android:background="@color/colorPrimary"
            android:text="@string/select_date"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/longEt"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/description_et"
            android:hint="@string/longitude"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/latEt"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/longEt"
            android:hint="@string/latitude"
            android:inputType="numberDecimal" />

    </RelativeLayout>

</RelativeLayout>


